Alterações de estilização

--- a/views/catalog-page.ejs
+++ b/views/catalog-page.ejs
@@ -93,7 +93,7 @@
             <%- include('./components/catalogPage/catalog-item', {
                 image: 'https://previews.123rf.com/images/indiraswork/indiraswork1608/indiraswork160800016/60704203-hot-summer-girl-beauty-sexy-lady-wear-fashion-dress-casual-clothes-party-date-time-model-woman-luxur.jpg',
                 url: '/product',
-                title: 'BLACK SPORT FOX BRALETTE adfasdfsadfa afsdfasdf',
+                title: 'BLACK SPORT FOX BRALETTE',
                 price: '99.00'
             }) %> 
             <%- include('./components/catalogPage/catalog-item', {
