--- a/views/components/bagPage/style/style-bag-page.ejs
+++ b/views/components/bagPage/style/style-bag-page.ejs
@@ -25,7 +25,7 @@
 
                 padding: 10px 0;
 
-                border-bottom: 2px solid black;
+                border-bottom: 2px solid #dbd9d7;
             }
 
                 #bag header h2 {
@@ -39,7 +39,7 @@
             .bag-item {
                 padding: 5% 0;
 
-                border-bottom: 2px solid black;
+                border-bottom: 2px solid #dbd9d7;
             }
 
                 .bag-item > div {
@@ -127,7 +127,9 @@
                     #bag-checkout button {
                         padding: 15px;
 
-                        background: #000F08;
+                        background: #dbd9d7;
+
+                        color: black;
 
                         margin-top: 15px;
                     }
