--- a/views/components/catalogPage/style/style-catalog-page.ejs
+++ b/views/components/catalogPage/style/style-catalog-page.ejs
@@ -22,7 +22,7 @@
 
             padding: 15px 0;
 
-            border-bottom: 1px dashed black;
+            border-bottom: 1px dashed #dbd9d7;
 
             width: 100%;
 
@@ -83,7 +83,7 @@
         }
 
             #catalog-categories-list button:hover {
-                background: red;
+                background: #727272;
 
                 font-family: HelveticaNeue63;
 
@@ -91,7 +91,7 @@
             }
 
         #catalog-filter-list button:hover {
-            color: red;
+            color: white;
         } 
 
         #price-picker {
