--- a/views/components/checkoutPage/style/style-checkout-page.ejs
+++ b/views/components/checkoutPage/style/style-checkout-page.ejs
@@ -7,7 +7,7 @@
         top: 0%;
         left: 0px;
 
-        background: rgba(255, 0, 0, 0.596);
+        background: #aaaaaa88;
 
         padding: 10px;
 
@@ -183,6 +183,8 @@
                         #coupon-area * {
                             font-size: 1rem;
 
+                            color: #ddddddc7;
+
                             font-family: HelveticaNeue45;
                         }
 
@@ -196,7 +198,7 @@
 
                             margin: 5px 0;
 
-                            border: 2px solid black;
+                            border: 2px solid rgb(90, 83, 74);
                         }
 
                         #number-input {
@@ -332,7 +334,7 @@
                 }
 
                 #coupon-area button {
-                    background-color: gray;
+                    background-color: rgb(88, 88, 88);
 
                     width: 30%;
                 }
