--- a/views/components/homePage/style/style-home-page.ejs
+++ b/views/components/homePage/style/style-home-page.ejs
@@ -45,7 +45,7 @@
         .section-title a {
             display: flex;
 
-            border: 2px solid #FFFFFF;
+            border: 2px solid #dbd9d7;
 
             justify-content: center;
             align-items: center;
@@ -101,11 +101,9 @@
             min-height: 250px;
             width: 100%;
 
-            background: white;
+            background-color: #131516;
 
             padding: 0 5% 30px;
-            
-            color: #000F08;
 
             text-align: center;
 
@@ -136,11 +134,6 @@
                 .section-title p br {
                     display: none;
                 }
-
-            /* .section-title a {
-                border-color: #000F08;
-                color: #000F08;
-            } */
     }
 
     section#section-photo-triple {
@@ -225,6 +218,10 @@
                         height: 100%;
                         width: 20px;
                     }
+
+                        /* #shop-title-top h3 svg * {
+                            fill: #dbd9d7;
+                        } */
 
             #shop-title-bottom {
                 bottom: -10%;
