--- a/views/components/style/style-color-picker.ejs
+++ b/views/components/style/style-color-picker.ejs
@@ -25,6 +25,6 @@
             }
 
         .product-color-preview.selected {
-            border: 2px solid black;
+            border: 2px solid white;
         }
 </style>
