--- a/views/components/style/style-footer.ejs
+++ b/views/components/style/style-footer.ejs
@@ -3,8 +3,6 @@
         display: flex;
         flex-direction: column;
 
-        /* height: 70vh; */
-
         padding: 5%;
 
         margin-top: auto;
@@ -61,8 +59,6 @@
                         letter-spacing: 0.04em;
 
                         font-weight: 600;
-
-                        color: #000F08;
                     }
 
             #footer-info {
@@ -81,10 +77,6 @@
                     margin: 15px 0;
                 }
 
-                #footer-info li, #footer-info li a {
-                    color: #000F08;
-                }
-
                 #footer-info li a {
                     display: flex;
                     
@@ -97,6 +89,10 @@
                         height: 25px;
                         width: 25px;
                     }
+
+                        /* #footer-info svg * {
+                            fill: #dbd9d7;
+                        } */
 
                     .footer-list-title svg {
                         display: none;
@@ -124,7 +120,7 @@
                 .footer-list-title {
                     padding: 20px;
 
-                    border-bottom: 1px dashed black;
+                    border-bottom: 1px dashed #dbd9d7;
 
                     cursor: pointer;
 
@@ -137,7 +133,7 @@
                     }
 
                 #footer-info div:first-child .footer-list-title {
-                    border-top: 1px dashed black;
+                    border-top: 1px dashed #dbd9d7;
                 }
 
                 #footer-info ul {
