--- a/views/components/style/style-header.ejs
+++ b/views/components/style/style-header.ejs
@@ -31,7 +31,7 @@
         }
 
         .home-page-header .slideTab {
-            background-color: red;
+            background-color: rgb(161, 161, 161);
 
             height: 100%;
             width: 0;
@@ -188,7 +188,7 @@
         }
 
         .home-page-header-aside.desktop a:hover, .home-page-header-aside.desktop button:hover {
-            color: gray;
+            color: #dbd9d7;
         }
 
         .home-page-header-aside.desktop.left > * {
@@ -237,8 +237,6 @@
             .header-search-container input::placeholder {
                 font-size: 1rem;
 
-                color: rgba(0, 0, 0, 0.678);
-
                 font-family: HelveticaNeue55;
             }
 
@@ -254,6 +252,10 @@
                 height: 20px;
                 width: 20px;
             }
+
+                /* .search-option-field svg * {
+                    fill: #dbd9d7;
+                } */
 
     .home-page-header.desktop .header-search-container {
         height: 40px;
