--- a/views/components/style/style-size-picker.ejs
+++ b/views/components/style/style-size-picker.ejs
@@ -19,10 +19,10 @@
         }
 
     #product-sizes .picker:hover {
-        border-bottom: 2px solid rgba(0, 0, 0, 0.61);
+        border-bottom: 2px solid rgba(255, 255, 255, 0.664);
     }
 
     #product-sizes .picker.selected {
-        border-bottom: 2px solid #000F08;;
+        border-bottom: 2px solid white;
     }
 </style>
