--- a/views/components/collectionsPage/style/style-collections-page.ejs
+++ b/views/components/collectionsPage/style/style-collections-page.ejs
@@ -4,7 +4,7 @@
     }
 
         .slick-arrow::before {
-            color: red;
+            color: rgb(85, 84, 84);
         }
 
         .collection-box {
@@ -27,7 +27,7 @@
             .collection-box > h1 {
                 width: 100%;
 
-                background-color: red;
+                background-color: rgb(85, 84, 84);
 
                 max-width: 400px;
             }
@@ -35,7 +35,7 @@
             .collection-box > p {
                 margin: 10px 0 0 2%;
 
-                border-left: 5px solid red;
+                border-left: 5px solid rgb(85, 84, 84);
 
                 width: 90%;
             }
@@ -75,7 +75,7 @@
 
                             z-index: 2;
 
-                            background: red;
+                            background: rgb(85, 84, 84);
 
                             padding: 15px;
 
