--- a/views/components/lovedItemsPage/style/style-loved-items-page.ejs
+++ b/views/components/lovedItemsPage/style/style-loved-items-page.ejs
@@ -59,7 +59,7 @@
         }
 
             #view-bag-button {
-                border: 2px solid black;
+                border: 2px solid #a5a5a4;
             }
 
             #checkout-button {
@@ -119,7 +119,6 @@
 
                 font-size: 0.9rem;
 
-                text-shadow: 1px 1px 2px black;
                 font-weight: bold;
             }
 
