--- a/views/components/style/style-sign-up.ejs
+++ b/views/components/style/style-sign-up.ejs
@@ -32,7 +32,7 @@
         display: flex;
         flex-direction: column;
         
-        background: #FFFFFF;
+        background-color: #131516;
         
         min-width: 320px;
         width: 100vw;
@@ -98,7 +98,7 @@
             }
 
             #sign-container input {
-                border-bottom: 1px solid black;
+                border-bottom: 1px solid #b1b0af;
 
                 width: 100%;
 
@@ -113,6 +113,10 @@
 
             #sign-container input, #sign-container input::placeholder {
                 font-size: 1rem;
+            }
+
+            #sign-container input::placeholder {
+                color: #aaaaaac7;
             }
 
             #sign-container #sign-condition-box {
@@ -136,7 +140,7 @@
             }
 
             #sign-container label {
-                color: black;
+                color: #dbd9d7;
 
                 line-height: 20px;
             }
@@ -156,7 +160,7 @@
             }
 
             #sign-container form .toggle-form-button {
-                color: black;
+                color: #dbd9d7;
 
                 margin-top: 15px;
 
