Mais micro alterações de estilização.

--- a/views/components/productPage/style/style-product-page.ejs
+++ b/views/components/productPage/style/style-product-page.ejs
@@ -150,8 +150,6 @@
                 }
 
             #product-info #arrow-icon {
-                fill: red;
-
                 position: sticky;
 
                 bottom: 10px;
@@ -225,7 +223,7 @@
 
                     width: 70%;
 
-                    background: red;
+                    background: rgb(85, 84, 84);
 
                     padding: 15px;
 
