--- a/views/checkout-page.ejs
+++ b/views/checkout-page.ejs
@@ -123,14 +123,14 @@
                 <div class="checkout-item">
                     <div class="checkout-item-head">
                         <img src="https://previews.123rf.com/images/subbotina/subbotina1810/subbotina181000042/109456339-beauty-model-girl-posing-in-fashionable-clothes-.jpg" alt="img">
-                        <h3>SODNSODNNDSN</h3>
+                        <h3>ITEM</h3>
                     </div>
                     <span>USD $100.00</span>
                 </div>
                 <div class="checkout-item">
                     <div class="checkout-item-head">
                         <img src="https://previews.123rf.com/images/subbotina/subbotina1810/subbotina181000042/109456339-beauty-model-girl-posing-in-fashionable-clothes-.jpg" alt="img">
-                        <h3>SODNSODNNDSN</h3>
+                        <h3>ITEM</h3>
                     </div>
                     <span>USD $100.00</span>
                 </div>
