--- a/views/components/bagPage/style/style-bag-page.ejs
+++ b/views/components/bagPage/style/style-bag-page.ejs
@@ -124,7 +124,7 @@
                     padding: 5%;
                 }
 
-                    #bag-checkout button {
+                    #bag-checkout a {
                         padding: 15px;
 
                         background: #dbd9d7;
