--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -19,21 +19,21 @@
         <div id='photo-triple'>
             <div class="photo-triple-item">
                 <%- include('./components/hover-content', {
-                    title: 'Roupa nova muito braba',
+                    title: 'Connect yourself, be your own beauty',
                     content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis error labore quae'
                 }) %> 
                 <img src='images/matthew-reyes-K6alnPrDWRY-unsplash.jpg' />
             </div>
             <div class="photo-triple-item">
                 <%- include('./components/hover-content', {
-                    title: 'Roupa nova muito braba',
+                    title: 'Connect yourself, be your own beauty',
                     content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis error labore quae'
                 }) %>
                 <img src='images/pexels-labskiii-6135785.jpg' />
             </div>
             <div class="photo-triple-item">
                 <%- include('./components/hover-content', {
-                    title: 'Roupa nova muito braba',
+                    title: 'Connect yourself, be your own beauty',
                     content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis error labore quae'
                 }) %>
                 <img src='images/pexels-kevin-kabore-4966995.jpg' />
@@ -78,39 +78,39 @@
             <a href="/product" class="shop-item" id="main-shop">
                 <%- include('./components/hover-content', {
                     title: 'Teste',
-                    content: 'ONASODFNAOSDNFOASNDFOANSDFON'
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit.'
                 }) %> 
                 <img id="main-shop-photo" src='images/hisu-lee-i2JDnMDMYv8-unsplash.jpg' />
             </a>
             <a href="/product" class="shop-item">
                 <%- include('./components/hover-content', {
                     title: 'Teste',
-                    content: 'ONASODFNAOSDNFOASNDFOANSDFON'
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit.'
                 }) %> 
                 <img class="shop-photo" src='images/seth-doyle-R5tHd-aYmPs-unsplash.jpg' />
             </a>
             <a href="/product" class="shop-item">
                 <%- include('./components/hover-content', {
                     title: 'Teste',
-                    content: 'ONASODFNAOSDNFOASNDFOANSDFON'
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit.'
                 }) %> 
                 <img class="shop-photo" src='images/yogendra-singh-R73uOEn9tio-unsplash.jpg' />
             </a>
             <a href="/product" class="shop-item">
                 <%- include('./components/hover-content', {
                     title: 'Teste',
-                    content: 'ONASODFNAOSDNFOASNDFOANSDFON'
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit.'
                 }) %> 
                 <img class="shop-photo" src='images/mubariz-mehdizadeh-o-wlIFT4zE4-unsplash.jpg' />
             </a>
             <a href="/product" class="shop-item">
                 <%- include('./components/hover-content', {
                     title: 'Teste',
-                    content: 'ONASODFNAOSDNFOASNDFOANSDFON'
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit.'
                 }) %> 
                 <img class="shop-photo" src='images/sofia-3PgSkwoyIOM-unsplash.jpg' />
             </a>
-            <h3 id='shop-title-bottom'>#BACULEJOS</h3>
+            <h3 id='shop-title-bottom'>#PROJECTS</h3>
         </div>
     </section>
 <%- include('./components/htmlBottom', {page: 'Home', hasFooter: true}) %> 
