--- a/views/bag-page.ejs
+++ b/views/bag-page.ejs
@@ -15,7 +15,7 @@
             }) %> 
             <div id="bag-checkout">
                 <h3>Total USD $490.00</h3>
-                <button>PROCEED TO CHECKOUT</button>
+                <a href="/checkout">PROCEED TO CHECKOUT</a>
                 <div id='bag-checkout-icons'>
                     <span>
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
