--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -13,7 +13,7 @@
         positions: 'left top',
         text: ['Inspired by the ‘70s and 80’s, we know that if you sift through', '<br>', 'our vintage inspired collection you’re gonna rock the perfect silhouette.'],
         button_text: 'SHOP NOW',
-        button_url: '/shop'
+        button_url: '/catalog'
     }) %>
     <section id='section-photo-triple'>
         <div id='photo-triple'>
@@ -46,7 +46,7 @@
         positions: 'left top',
         text: ['What started as a true ‘80s vintage pair of jeans,', '<br>', 'finished as a re-energised, wider leg vintage jean with versatile detailing.'],
         button_text: 'SHOP DENIM',
-        button_url: '/shop'
+        button_url: '/catalog'
     }) %>
     <%- include('./components/arrivals', {
         title: 'NEW ARRIVALS',
@@ -67,7 +67,7 @@
     }) %>
     <section id='section-shop'>
         <div id="shop">
-            <a href="/shop" id='shop-title-top'>
+            <a href="/catalog" id='shop-title-top'>
                 <h3>
                     SHOP 
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
